test/Harper/Tests/Bad/VariantMethodTypeHintWithoutDefinition.har
value HelloWorld = {
    variant Hi = {
      sayHello :: String;
      sayHello = "Hi, World!";
    };

    variant Hello = {
      sayHello :: String;
    };
  };